# MVB

./: CMakeLists.txt  test_exit.c  test_init.c  test_read.c
mvbc_lib/lib/: CMakeLists.txt  json_parser.c  lib_main.c
mvbc_lib/src/: CMakeLists
mvbc_lib/src/include/: mvbc_app_interface.h  mvbc_lib.h
